# LunarDB

./: .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  COMPILEGUIDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  LUNARDB_LICENSE.txt  Makefile  README.md  SECURITY.md  lunardb.rb  lunardb.wxs  manifest.json  mix.exs  update.sh
.github/workflows/: brew-publish.yml  builds.yml  codeql.yml  cpp-build-test.yml  cpp_and_modules_test.yml  crate-build.yml  docker-publish.yml  test-lunar-exe.yml
LICENSES/: LICENSE.rtf
apis/: go.mod  go.sum
apis/api/v1/: main.go  nginx.conf  openapi.yaml  routes.go
apis/cmd/lunardb_api/: main.go
apis/internal/database/: cache.go
apis/internal/handlers/: routes.go
apis/internal/middleware/: logger.go
benchmarks/: README.md  main.zig  set_benchmark.zig
distribution/: README.md  build.sbt
distribution/src/main/scala/lunardb/cache/: CacheCluster.scala  CacheManager.scala  CacheNode.scala  CacheUtils.scala
docs/: AUTOMATION.md  COMMANDS.md  LUA_SANDBOX.md  LUNARDB_API.md  SERVELOCALHOST.md
docs/modules/: LUNARAI.md  LUNARJSON.md  LUNARVECTOR.md
installer/: NOTE.txt  SetupLunar.msi  SetupLunar.wixpdb  lunardb.wxs  wix.json
lib/lunar_db/: application.ex
lib/lunar_db/cluster/: clustering.ex
lib/lunar_db/fault_tolerance/: fault_tolerance.ex
lib/lunar_db/middleware/: api_gateway.ex
lib/lunar_db/monitor/: health_check.ex
modules/: .moduleignore
modules/include/: lunarai.h  lunarai.hpp  lunarstream.h  lunarstream.hpp  lunarvector.h  lunarvector.hpp
modules/lunarai/: Cargo.toml  build.rs  main.mojo  pixi.toml
modules/lunarai/src/: ai.rs  embeddings.rs  lib.rs  main.rs  models.rs  rag.rs  storage.rs  tokenizer.rs
modules/lunarcloud/: Cargo.toml
modules/lunarcloud/network/: go.mod
modules/lunargis/: Cargo.toml
modules/lunargis/src/: bindings.rs  geometry.rs  index.rs  lib.rs  queries.rs  spatial.rs
modules/lunargraph/: Cargo.toml  core.c  core.h  graph.c  graph.h  main.c  nodes.c  nodes.h
modules/lunargraph/src/: core.rs  graph.rs  lib.rs  nodes.rs
modules/lunarjson/: Cargo.toml  lunar_json.h
modules/lunarjson/src/: json.rs  lib.rs  main.rs
modules/lunarsearch/: Cargo.toml
modules/lunarsearch/src/: core.rs  lib.rs  main.rs  search.rs
modules/lunarstream/: Cargo.toml  build.rs  cbindgen.toml
modules/lunarstream/src/: bindings.rs  error.rs  lib.rs  manager.rs  stream.rs  utils.rs
modules/lunarvector/: Cargo.toml  build.rs
modules/lunarvector/src/: algorithm.rs  commands.rs  core.rs  hash.rs  index.rs  lib.rs  main.rs  storage.rs  vector.rs
server/: lunardb.json  main_server.cpp  server.cpp  server.h
servers/: lunardb.json  server.h
src/: GCManager.cpp  cache.cpp  cache.h  cache.rs  concurrency.cpp  concurrency.h  concurrency.rs  connect.cpp  connect.h  core.cpp  core.h  core.rs  core_ARCH.cpp  core_ARCH.h  core_MAIN.cpp  core_MAIN.h  hashing.cpp  hashing.h  hashing.rs  lib.rs  main.cpp  main_ARCH.cpp  module.cpp  module.h  modules_get.rb  mvcc.cpp  mvcc.h  parser.cpp  parser.h  rate_limiting.cpp  rate_limiting.h  save.rs  saved.cpp  saved.h  server.cpp  server.h  sharding.cpp  sharding.h  sql.cpp  sql.h
src/crow/include/crow/: app.h  ci_map.h  common.h  http_connection.h  http_parser_merged.h  http_request.h  http_response.h  http_server.h  json.h  logging.h  middleware.h  middleware_context.h  multipart.h  multipart_view.h  mustache.h  parser.h  routing.h  socket_adaptors.h  task_timer.h  utility.h  websocket.h
src/crow/include/crow/middlewares/: cookie_parser.h  cors.h  utf-8.h
src/experiments/: ACID.cpp  ACID.h  GCManager.cpp  GCManager.h  mvcc.cpp  mvcc.h
src/handlers/: api_handler.cpp  mod.rs
src/handlers/api/: api_handler.cpp  api_handler.h  api_main.cpp
src/handlers/api/tcp/: tcp.rs
src/lrql/: parser.cpp  parser.h
src/lua/: NOTE.txt  lua.rs  mod.rs  sandbox.lua  sandbox.rs
src/lua/example/: script.lua
src/lua/examples/: example_script.lua
src/providers/: mysql_provider.hpp  postgresql_provider.hpp  provider.hpp  registry.hpp
src/servers/: main_server.cpp  server.cpp  server.h
src/tests/: test_get_modules.rb
src/zig/benchmarks/: main.zig  set_benchmark.zig
testing/: example.lrql  run_tests.rb
testing/auto/: scanner.rb
testing/integration/: performance_spec.rb  test_get_modules.rb
testing/spec/: nosql_spec.rb  sql_spec.rb
tests/: run_tests.rb
tests/spec/: nosql_spec.rb  sql_spec.rb
tools/: Cargo.toml  update.rs
