[package]
name = "lunarai"
description = "A Artificial Intelligence embeddings for LLMs in LunarDB"
authors = ["Kazooki123"]
keywords = ["ai", "embeddings", "llm", "module"]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
build = "build.rs"

[lib]
name = "lunarai"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
tokenizers = "0.21"
safetensors = "0.4.5"
tch = "0.18.1"
ndarray = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
rayon = "1.8"
cached = "0.54"
lru = "0.12.5"

[build-dependencies]
cbindgen = "0.26"
cmake = "0.1"
torch-sys = "0.18.1"
