[package]
name = "lunarai"
description = "A Artificial Intelligence embeddings for LLMs in LunarDB"
authors = ["Kazooki123"]
keywords = ["ai", "embeddings", "llm", "module"]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
build = "build.rs"

[lib]
name = "lunarai"
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.32"
chrono = "0.4"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10"
rust-stemmers = "1.2"
stop-words = "0.7"
thiserror = "1.0"
rayon = "1.7"
hashbrown = "0.14"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
cbindgen = "0.26"
