[package]
name = "lunarvector"
description = "A Vector database module for LunarDB"
categories = ["vector", "database", "rust", "module"]
version = "0.1.0"
authors = ["Kazooki123", "StarloExoliz"]
edition = "2021"
license = "MIT"

[lib]
name = "lunarvector"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
lazy_static = "1.5.0"

[build-dependencies]
cbindgen = "0.24"
