[package]
name = "lunarvector"
description = "A Vector database module for LunarDB"
version = "0.1.0"
keywords = ["vector", "embeddings", "database", "module"]
authors = ["Kazooki123"]
edition = "2021"
license = "MIT"

[lib]
name = "lunarvector"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
lazy_static = "1.5.0"

[build-dependencies]
cbindgen = "0.24"
